Update Rest API documentation.
